--- a/draft/piece-de-resistance.tex
+++ b/draft/piece-de-resistance.tex
@@ -33,6 +33,8 @@
 
 \section{Introduction}
 
+At least half of the world's 7000 languages will be extinct this century. Grenoble 2011:27 (Bourget 2015)
+
 Of the world's roughly 7000 languages, only a small number are present on the World Wide Web, or present in digital form. The majority of technological infrastructure that first world nations use and depend upon has been built with English, and serves English speakers. There are a few languages with large populations and state-backing which have a large foothold on the web. For instance, China is estimated to have more users of the internet than Japan, India, and the United States combined \footnote{\url{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}}. The majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software, but the user interface will be in Chinese. Some thirty languages \cite{Crubadan} are estimated to be at this level. The majority of the world's languages, however, have no significant user presence, and are not present on the World Wide Web.
 
 There are various metrics would can be used to assess linguistic health in the digital sphere.
