Some work on Naskapi, adding references

--- a/draft/thesis.tex
+++ b/draft/thesis.tex
@@ -101,13 +101,8 @@ To get a better idea of hose these metrics can be implemented, we can look at se
 
 \subsection{Naskapi}
 
-Naskapi is a Cree language spoken % Verify this is the right denomination
- in central Quebec. Virtually the entire population of 800 Naskapi (meaning "The People" %Verify meaning and size of population
-) live within the reservation Kawawawimatch, % Spell check
-around 10 miles from Schefferville. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 10,000 members, scattered among seven communities in Quebec), % TODO Source
- who live on their own reservation and who speak Montagnais % Spelling
- Cree, a related language. The two languages are not mutually distinguishable to a large degree. %Verify
-The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawawimatch in the 1960s, after initially settling in Schefferville for some years. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, as the First Nations population is the largest growing population in Canada. % Fact check
+Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}. Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 17,000 members, scattered among Quebec and Labrador\footnote{https://en.wikipedia.org/wiki/Innu}), who live on their own reservation and who speak Montagnais or Innu-aimun, a related language. The two languages are similar, and the Naskapi youth are often diglossic in Montagnais (but the Innu are not) \cite{MacKenzie-1980}. %Verify
+The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1960s, after initially being resettled in Schefferville in the early 1950s. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, as the First Nations population is the largest growing population in Canada.\footnote{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}
 
 Besides a few social workers, teachers, and nurses who speak English, all of the Naskapi speak their own language regularly. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Innu hymnals and an Innu bible. % Verify it's not another Cree language
 In recent years, the Naskapi Development Council, which works with translators provided by the local tribal council (called the Band), has produced a Naskapi to English bilingual dictionary in three volumes % \source{Bill and Norma Jean and Margueritte MacKenzie}. 
@@ -249,11 +244,11 @@ Process:
 4. `ipfs add -r repos`
 5. `ipfs pin add repos`
 
-%ferences}
+\section{References}
 %\label{main:ref}
 %
-%\bibliographystyle{lrec2016}
-%\bibliography{references.bib}
+\bibliographystyle{../LREC2016/lrec2016}
+\bibliography{references}
 
 
 %\section{Language Resource References}
