--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt, a4paper]{article}
-\usepackage{../LREC2016/lrec2016}
+\usepackage{./LREC2016/lrec2016}
 \usepackage{multibib, url, hyperref}
 \newcites{languageresource}{Language Resources}
 \usepackage{graphicx}
@@ -101,12 +101,12 @@ To get a better idea of hose these metrics can be implemented, we can look at se
 
 \subsection{Naskapi}
 
-Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}. Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 17,000 members, scattered among Quebec and Labrador\footnote{https://en.wikipedia.org/wiki/Innu}), who live on their own reservation and who speak Montagnais or Innu-aimun, a related language. The two languages are similar, and the Naskapi youth are often diglossic in Montagnais (but the Innu are not) \cite{MacKenzie-1980}. %Verify
+Naskapi is a Cree language in the Algonquin family spoken in central Quebec \cite{MacKenzie-and-Jancewicz-1994}. Virtually the entire population of around 800 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 17,000 members, scattered among Quebec and Labrador\footnote{https://en.wikipedia.org/wiki/Innu}), who live on their own reservation and who speak Montagnais or Innu-aimun, a related language. The two languages are similar, and the Naskapi youth are often diglossic in Montagnais (but the Innu are often not) \cite{MacKenzie-1980}.
+
 The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1960s, after initially being resettled in Schefferville in the early 1950s. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, as the First Nations population is the largest growing population in Canada.\footnote{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}
 
-Besides a few social workers, teachers, and nurses who speak English, all of the Naskapi speak their own language regularly. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Innu hymnals and an Innu bible. % Verify it's not another Cree language
-In recent years, the Naskapi Development Council, which works with translators provided by the local tribal council (called the Band), has produced a Naskapi to English bilingual dictionary in three volumes % \source{Bill and Norma Jean and Margueritte MacKenzie}. 
-This was produced by linguists from the Summer Institute of Linguistics, funded by Wycliffe. %TODO More on Wycliffe
+All of the Naskapi speak their own language regularly, in all contexts. In the schools, there are Naskapi-only classes held until Grade 8 \cite{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Montagnais hymnals and an Montagnais bible. In recent years, the Naskapi Development Council, which works with translators provided by the local tribal council (called the Band), has produced a Naskapi to English bilingual dictionary in three volumes \cite{MacKenzie-and-Jancewicz-1994}. This was produced by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators \footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}}.
+
 % How was the document originally made?
 Today, the SIL linguists are a team of six: two long term linguists, and two pairs of husband and wife pairs who are training how to work as bible translators in this community before moving on to working with other Cree communities in Canada. Naskapi does not have it's own bible: work has been done on Gensis, Exodus, and Psalms, and several children stories and books of oral legends from a few elders have been produced. The full-time translators are two people: a young woman in her mid-twenties, and an older gentleman of around 50 years of age. At times, elders also contribute to the bible translation effort by marking up their pre-publication drafts, which they then go over with the translators. 
 
@@ -247,7 +247,7 @@ Process:
 \section{References}
 %\label{main:ref}
 %
-\bibliographystyle{../LREC2016/lrec2016}
+\bibliographystyle{./LREC2016/lrec2016}
 \bibliography{references}
 
 
