Naskapi New Testament

--- a/references.bib
+++ b/references.bib
@@ -65,3 +65,12 @@
   year={2017},
   publisher={Palgrave Macmillan US}
 }
+
+@book{naskapi-new-testament,
+  title={Naskapi New Testament},
+  author="{Naskapi Development Corporation}",
+  year={2007},
+  isbn={978-0-88843-557-8},
+  url={http://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
+  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
+}
