Started Scottish Gaelic, added Crubadan and UNESCO

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,9 @@
+@inproceedings{scannell2007crubadan,
+  title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
+  author={Scannell, Kevin P},
+  year={2007}
+}
+
 @article{kornai2013digital,
   title={Digital language death},
   author={Kornai, Andr{\'a}s},
